--- a/env-config/.env.example
+++ b/env-config/.env.example
@@ -1,4 +1,5 @@
-examples that should has value in .env file
-like...
 YII_DEBUG=true
 YII_ENV=dev # 'prod' or 'dev' or 'test
+BACKEND_COOKIE_VALIDATION_KEY=anystring
+FRONTEND_COOKIE_VALIDATION_KEY=anystring
+API_COOKIE_VALIDATION_KEY=anystring
