--- a/env-config/.env.example
+++ b/env-config/.env.example
@@ -3,3 +3,20 @@ YII_ENV=dev # 'prod' or 'dev' or 'test
 BACKEND_COOKIE_VALIDATION_KEY=anystring
 FRONTEND_COOKIE_VALIDATION_KEY=anystring
 API_COOKIE_VALIDATION_KEY=anystring
+
+DB_DSN="mysql:host=localhost;dbname=dbname"
+DB_USERNAME="user"
+DB_PASSWORD="pass"
+DB_TABLE_PREFIX="anystring"
+DB_CHARSET=utf8
+DB_ENABLE_QUERY_CACHE=true
+DB_QUERY_CACHE_DURATION=5 # As Second
+DB_ENABLE_SCHEMA_CACHE=true
+DB_SCHEMA_CACHE_DURATION=86400 # As Second
+DB_SCHEMA_CACHE_COMPONENT="cache"
+
+ENABLE_SLAVES=false
+SLAVE_DB_USERNAME="user"
+SLAVE_DB_PASSWORD="pass"
+FIRST_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
+SECOND_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
