--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,14 @@
   "require": {
     "php": ">=8.1",
     "yiisoft/yii2": "~2.0.45",
-    "yiisoft/yii2-bootstrap5": "~2.0.2",
+    "yiisoft/yii2-bootstrap4": "^2.0",
+    "yiisoft/yii2-bootstrap5": "*",
     "yiisoft/yii2-symfonymailer": "~2.0.3",
     "vlucas/phpdotenv": "^5.3",
     "filsh/yii2-oauth2-server": "*",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "aminbbb92/yii2-user": "@dev",
+    "aminbbb92/yii2-rbac": "@dev"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
