edit form and index view

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "ext-pdo": "*",
     "aminbbb92/yii2-user": "@dev",
     "aminbbb92/yii2-rbac": "@dev",
-    "bizley/migration": "^4.4"
+    "bizley/migration": "^4.4",
+    "yii2tech/ar-softdelete": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
