--- a/env-config/.env.example
+++ b/env-config/.env.example
@@ -1,5 +1,9 @@
 YII_DEBUG=true
 YII_ENV=dev # 'prod' or 'dev' or 'test
+INCE_ROOT="anystring"
+INCE_WEB="anystring"
+CDN_ROOT="anystring"
+CDN_WEB="anystring"
 BACKEND_COOKIE_VALIDATION_KEY=anystring
 FRONTEND_COOKIE_VALIDATION_KEY=anystring
 API_COOKIE_VALIDATION_KEY=anystring
