--- a/env-config/.env.example
+++ b/env-config/.env.example
@@ -24,3 +24,5 @@ SLAVE_DB_USERNAME="user"
 SLAVE_DB_PASSWORD="pass"
 FIRST_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
 SECOND_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
+
+API_BASE_URL="http://"
