--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "omnilight/yii2-scheduling": "*",
     "yiisoft/yii2-mongodb": "^2.1",
     "yiisoft/yii2-redis": "~2.0.0",
-    "ignatenkovnikita/yii2-swagger": "dev-master"
+    "sadi01/yii2-swagger": "dev-master"
   },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
