--- a/env-config/.env.example
+++ b/env-config/.env.example
@@ -26,3 +26,7 @@ FIRST_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
 SECOND_SLAVE_DB_DSN="mysql:host=localhost;dbname=dbname"
 
 API_BASE_URL="http://"
+
+REDIS_HOST_NAME="localhost"
+REDIS_PORT=6379
+REDIS_DATABASE=0
