--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
     "notamedia/yii2-sentry": "^1.7",
     "lubosdz/yii2-captcha-extended": "^1.0",
     "kartik-v/yii2-widget-select2": "dev-master",
-    "froala/yii2-froala-editor": "^3.2.7"
+    "froala/yii2-froala-editor": "3.2.5",
+    "kartik-v/yii2-grid": "@dev",
+    "kartik-v/yii2-bootstrap4-dropdown": "@dev"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
