--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "kartik-v/yii2-widget-select2": "dev-master",
     "froala/yii2-froala-editor": "3.2.5",
     "kartik-v/yii2-grid": "@dev",
-    "kartik-v/yii2-bootstrap4-dropdown": "@dev"
+    "kartik-v/yii2-bootstrap4-dropdown": "@dev",
+    "kartik-v/yii2-widget-fileinput": "dev-master"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
