--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "froala/yii2-froala-editor": "3.2.5",
     "kartik-v/yii2-grid": "@dev",
     "kartik-v/yii2-bootstrap4-dropdown": "@dev",
-    "kartik-v/yii2-widget-fileinput": "dev-master"
+    "kartik-v/yii2-widget-fileinput": "dev-master",
+    "guzzlehttp/guzzle": "^7.5"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
