--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "ext-pdo": "*",
     "aminbbb92/yii2-user": "@dev",
     "yii2tech/ar-softdelete": "^1.0",
-    "yiisoft/yii2-httpclient": "^2.0",
+    "yiisoft/yii2-httpclient": "*",
     "aws/aws-sdk-php": "^3.241",
     "yiisoft/yii2-imagine": "~2.2.0",
     "omnilight/yii2-scheduling": "*",
@@ -44,7 +44,8 @@
     "kartik-v/yii2-grid": "@dev",
     "kartik-v/yii2-bootstrap4-dropdown": "@dev",
     "kartik-v/yii2-widget-fileinput": "dev-master",
-    "guzzlehttp/guzzle": "^7.5"
+    "guzzlehttp/guzzle": "^7.5",
+    "ext-http": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
