--- a/api/codeception.yml
+++ b/api/codeception.yml
@@ -1,15 +1,22 @@
-namespace: frontend\tests
-actor_suffix: Tester
+namespace: api\tests
 paths:
     tests: tests
     output: tests/_output
     data: tests/_data
     support: tests/_support
+    envs: tests/_envs
+actor_suffix: Tester
 bootstrap: _bootstrap.php
 settings:
     colors: true
+    shuffle: true
     memory_limit: 1024M
+extensions:
+    enabled:
+        - Codeception\Extension\RunFailed
 modules:
     config:
         Yii2:
-            configFile: 'config/codeception-local'
+            configFile: 'config/codeception.php'
+            transaction: false # don't wrap test in transaction
+            cleanup: false # don't clean up the fixtures
