--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "kartik-v/yii2-widget-fileinput": "dev-master",
         "guzzlehttp/guzzle": "^7.5",
-        "ext-http": "*"
+        "ext-http": "*",
+        "bower-asset/clipboard": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
