--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "codeception/module-filesystem": "^2.0",
         "codeception/module-rest": "^2.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "symfony/browser-kit": ">=2.7 <=4.2.4",
+        "bizley/migration": "^4.0"
     },
     "config": {
         "allow-plugins": {
