--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,9 @@
         "ext-http": "*",
         "bower-asset/clipboard": "dev-master",
         "codeception/module-phpbrowser": "*",
-        "voime/yii2-google-maps": "*"
-
+        "voime/yii2-google-maps": "*",
+        "sadi01/yii2-more-settings": "*",
+        "rosell-dk/webp-convert": "^2.6"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -66,7 +67,8 @@
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "php-http/discovery": true
         },
         "process-timeout": 1800,
         "fxp-asset": {
