--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "voime/yii2-google-maps": "*",
         "sadi01/yii2-more-settings": "*",
         "rosell-dk/webp-convert": "^2.6",
-        "2amigos/yii2-selectize-widget": "~1.0"
+        "2amigos/yii2-selectize-widget": "~1.0",
+        "kartik-v/yii2-widget-depdrop": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
