--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
         "sadi01/yii2-more-settings": "*",
         "rosell-dk/webp-convert": "^2.6",
         "2amigos/yii2-selectize-widget": "~1.0",
-        "kartik-v/yii2-widget-depdrop": "dev-master"
+        "kartik-v/yii2-widget-depdrop": "dev-master",
+        "symfony/dom-crawler": "2.8",
+        "symfony/css-selector": "2.8"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
