fix:add $logTargetMaskedVars to console backend and api /add range to event search model

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,9 @@
         "voime/yii2-google-maps": "*",
         "sadi01/yii2-more-settings": "*",
         "rosell-dk/webp-convert": "^2.6",
-        "2amigos/yii2-selectize-widget": "~1.0"
+        "2amigos/yii2-selectize-widget": "~1.0",
+        "kartik-v/yii2-date-range": "^1.7",
+        "sabberworm/php-css-parser": "^8.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
