--- a/composer.json
+++ b/composer.json
@@ -54,9 +54,7 @@
         "sadi01/yii2-more-settings": "*",
         "rosell-dk/webp-convert": "^2.6",
         "2amigos/yii2-selectize-widget": "~1.0",
-        "kartik-v/yii2-widget-depdrop": "dev-master",
-        "symfony/dom-crawler": "2.8",
-        "symfony/css-selector": "2.8"
+        "kartik-v/yii2-widget-depdrop": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
